Setup CI, add LICENCE

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,13 @@
 name = "atop"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Petter K <ermines-bookie-0l@icloud.com>"]
+description = "Top alternative that shows average CPU usage"
+license = "Apache-2.0"
 
 [dependencies]
 sysinfo = "0.20.5"
+
+[[bin]]
+name = "atop"
+path = "src/main.rs"
