Add paths to yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Build, test and publish (Main)
 on:
   push:
     branches: [ "main" ]
+    paths: [ "src/" ]
     
 env:
   CARGO_TERM_COLOR: always
