--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: Build, test and publish (Main)
 on:
   push:
     branches: [ "main" ]
-    paths: [ "src/" ]
+    tags:
+      ['v[0-9]+.[0-9]+.[0-9]+']
     
 env:
   CARGO_TERM_COLOR: always
