--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
       run: |
         LATEST_TAG=$(git describe --tags --abbrev=0)
 
-        if [[ $LATEST_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          VERSION=${LATEST_TAG#v}  # Remove 'v' prefix
+        if [[ $LATEST_TAG =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
           sed -i "s/version = \".*\"/version = \"$VERSION\"/" Cargo.toml
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
