--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atop"
-version = "0.1.2"
+version = "0.1.4"
 edition = "2021"
 authors = ["Petter K <ermines-bookie-0l@icloud.com>"]
 description = "Top alternative that shows average CPU usage"
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 
 [dependencies]
 sysinfo = "0.20.5"
+structopt = "0.3"
 
 [[bin]]
 name = "atop"
